bin/test/fixtures/public/fail/semantic/funcNotFound.jmm
/*  REASON:
    Variable assignments to literals must have the literal be the variable's type.
*/

class T {
    int ola;

    public static void main(String[] a) {
        io.println(10);
        this.foo();

    }

    public int foo(boolean a, int b){
        return 1;
    }

    public int foo(int a, int b, int c){
            return 1;
        }

    public int foo(boolean c, boolean d){
        return 1;
    }
}
